dnl Af configure script template
dnl
dnl $Id: configure.in,v 1.15 1996/09/22 16:27:58 malc Exp $
dnl
AC_INIT(src/af.h)
AC_CONFIG_HEADER(src/config.h)
AC_PROG_CC
AC_PROG_CPP
AC_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_RANLIB
AF_MASTERMIND
AF_CC_OPTIONS
AF_SYS_NETWORKING
AF_HOSTNAME
AF_SVR4_PASSWD
AF_WHERE
AF_PIPES
AF_INSTALL
AF_MTA
AF_MAXLOCK
AF_LOCKFUNC
AF_SIGFILE
AF_DEFEDITOR
AF_DEFPAGER
AF_DEFINFO
AF_DEFSPELLCHECK
AF_DEFSPOOLER
AF_DEFMIME
AF_COFFEE
AC_CHECK_HEADERS(string.h memory.h unistd.h)
AC_HEADER_DIRENT
AC_CHECK_LIB(ndir, opendir, LIBS="$LIBS -lndir")
AC_STRUCT_TM
AF_TM_GMTOFF
AC_RETSIGTYPE
AC_CHECK_TYPE(size_t, unsigned)
AC_CHECK_TYPE(time_t, long)
AC_CHECK_TYPE(pid_t, int)
AC_CHECK_TYPE(uid_t, int)
AC_CHECK_TYPE(gid_t, int)
AF_SYS_JOBCONTROL
AF_SYS_RESIZING
AF_HEADER_TERMIO
AC_CHECK_LIB(termcap, tgoto, LIBS="$LIBS -ltermcap",
  AC_CHECK_LIB(termlib, tgoto, LIBS="$LIBS -ltermlib",
    AC_CHECK_LIB(curses, tgoto, LIBS="$LIBS -lcurses",
      AC_CHECK_LIB(ncurses, tgoto, LIBS="$LIBS -lncurses"))))
AC_CHECK_LIB(PW, getpwent, LIBS="$LIBS -lPW")
AC_CHECK_LIB(sun, getpwent, LIBS="$LIBS -lsun")
AF_FUNC_PGRP_ARGS
AF_FUNC_OSPEED_EXTERN
AC_CHECK_FUNCS(pause readlink sigprocmask sigsetmask tzset)
AC_REPLACE_FUNCS(dup2 getcwd getopt killpg memcpy setpgid)
AF_SET_LIBDEFS
AC_CHECK_FUNC(strncasecmp, [], [LIBOBJS="$LIBOBJS strcase.o"])
AC_REPLACE_FUNCS(strdup strerror tempnam)
AC_OUTPUT(afl/Makefile doc/Makefile lib/Makefile src/Makefile)
